# claude-investor

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  rxconfig.py
assets/: analysis.css
gpt_investor/: gpt_investor.py  state.py
gpt_investor/data/: discovery.py  fundamentals.py  macro.py  market_data.py  market_regime.py  sentiment.py
gpt_investor/infra/: logging_config.py
gpt_investor/llm/: analysis.py  claude.py  schemas.py
gpt_investor/storage/: cache.py
gpt_investor/ui/: components.py
tests/: conftest.py  test_cache.py  test_claude_parser.py  test_fundamentals.py  test_macro.py  test_market_regime.py  test_sentiment.py  test_verdict_schema.py
